# XBotCore-interfaces

./: CMakeLists.txt  XBotCore-interfaces.kdev4  XBotCore-interfacesConfig.cmake.in
include/XBotCore-interfaces/: All.h  IXBotChain.h  IXBotJoint.h  IXBotModel.h  IXBotRobot.h  RosSerialization.h  XBotESC.h  XBotPipes.h  XBotPlugin.h  XBotSharedMemory.h  XBotSharedObject.h  XDomainCommunication.h  pipes.h
src/: XBotPlugin.cpp  XDomainCommunication.cpp
